--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.agonaika.agonaika">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -22,11 +20,15 @@
         </activity>
         <activity
             android:name=".Home"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Loginemail" />
-        <activity android:name=".Facercognition" />
-        <activity android:name=".Clockin"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" >
+
+
+
+</activity>
+        <activity android:name=".Loginemail">
+
+
+        </activity>
     </application>
 
 </manifest>
