--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.agonaika.agonaika">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,15 +22,11 @@
         </activity>
         <activity
             android:name=".Home"
-            android:theme="@style/AppTheme.NoActionBar" >
-
-
-
-</activity>
-        <activity android:name=".Loginemail">
-
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Loginemail" />
+        <activity android:name=".Facercognition" />
+        <activity android:name=".Clockin"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
