--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Changedept"
-            android:label="@string/title_activity_changedept"></activity>
+            android:label="@string/title_activity_changedept"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
