--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation  'com.android.support:design:27.1.1'
+    implementation  'com.android.support:design:27.1.1'
+    implementation  'com.mcxiaoke.volley:library-aar:1.0.0'
 }
