--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,9 +32,11 @@
             android:name=".Changedept"
             android:label="@string/title_activity_changedept"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Timesheet"
-            android:theme="@style/AppTheme.NoActionBar"
-            ></activity>
+        <activity
+            android:name=".Timesheet"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Timeentry"
+            android:theme="@style/AppTheme.NoActionBar" ></activity>
     </application>
 
 </manifest>
