--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,12 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Loginemail" />
         <activity android:name=".Facercognition" />
-        <activity android:name=".Clockin"
+        <activity
+            android:name=".Clockin"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Changedept"
+            android:label="@string/title_activity_changedept"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
