waiting registeration screens

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".Home"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -38,8 +32,23 @@
         <activity
             android:name=".Timeentry"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Daytime"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".Daytime"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Landingpage"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Entertime2"
+            android:theme="@style/AppTheme.NoActionBar">
+
+
+        </activity>
     </application>
 
 </manifest>
