--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Home"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -37,6 +37,12 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Landingpage"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Entertime2"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Registration1"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,11 +50,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Entertime2"
-            android:theme="@style/AppTheme.NoActionBar">
-
-
-        </activity>
+        <activity
+            android:name=".Register2"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Register3"></activity>
     </application>
 
 </manifest>
