--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,29 @@
     package="com.agonaika.agonaika">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
+
+    <uses-feature
+        android:name="android.hardware.Camera"
+        android:required="false"/>
+    <uses-feature
+        android:name="android.permission.READ_PHONE_STATE"
+        android:required="false"/>
+    <uses-feature
+        android:name="android.permission.VIBRATE"
+        android:required="false"/>
+    <uses-feature
+        android:name="android.permission.CALL_PHONE"
+        android:required="false"/>
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="false"/>
+
 
     <application
         android:allowBackup="true"
