--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
     <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
 
     <uses-feature
-        android:name="android.hardware.Camera"
-        android:required="false"/>
+        android:name="android.hardware.camera2"
+        android:required="true"/>
     <uses-feature
         android:name="android.permission.READ_PHONE_STATE"
         android:required="false"/>
