--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,65 @@
 /.idea/modules.xml
 /.idea/workspace.xml
 .DS_Store
+.DS_Store?
 /build
 /captures
 .externalNativeBuild
+
+# Android Studio
+.idea/
+.gradle
+/*/local.properties
+/*/out
+/*/*/build
+/*/*/production
+*.iml
+*.iws
+*.ipr
+*~
+*.swp
+.idea/modules.xml
+
+# Built application files
+/*/build/
+/*/*/build/
+/*/*/*/build/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Gradle generated files
+.gradle/
+
+# Signing files
+.signing/
+
+# User-specific configurations
+.idea/libraries/
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/.name
+.idea/compiler.xml
+.idea/copyright/profiles_settings.xml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/scopes/scope_settings.xml
+.idea/vcs.xml
+*.iml
+
+# built application files
+*.apk
+*.ap_
+
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+
+# Eclipse project files
+.classpath
+.project
