--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.6.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'net.zetetic:android-database-sqlcipher:4.0.1@aar'
+    //implementation('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
+        //transitive = true}
 }
