--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -40,6 +41,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.6.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'net.zetetic:android-database-sqlcipher:4.0.1@aar'
+    implementation 'com.android.support:multidex:1.0.3'
     //implementation('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         //transitive = true}
 }
